﻿11/29/2014 0.8.5b
  Fixes #100: A.C.T. Checks user permissions again.
  Potential Fix #99 Un-cached texture location in provider renderer.
  Cleaned up terminal work code.

11/28/2014 0.8.5b
  Fixes #81: Added Wireless Essentia Terminal.
  Major GUI cleanup for essentia terminals and cells.

11/27/2014 0.8.5b
  Created model for gearboxes.
  Fixed an A.C.T crafting bug.
  A.C.T. search bar can be focused with right-click.

11/26/2014 0.8.5b
  Changed name of storage cell "casing" to "housing" to conform to AE.
  Fixes #97: NEI Shift+Click in the A.C.T. now includes ore dictionary matches, this also fixes shift-crafting not matching properly.
  A.C.T. Search bar opens with focus again.

11/25/2014 0.8.4b
  Lots of AE network code fixes. Lots.
  Fixes #94: Cell recipe now uses glass if warded glass has been disabled.
  Fixes #96: Import bus can now import from Essentia Buffers.

11/23/2014 0.8.4b
  Storage bus no longer requires a filter to be able to interact with a jar.
  Fixes #93: Essentia terminal no longer drops inventory contents when wrenched.
  Fixes #44: Subnets are now supported by placing an Essentia Storage Bus against a ME Interface block.
  Note: Filter is not respected for subnet operation.

11/22/2014 0.8.4b
  Cleaned up provider rendering code.
  Updated ACT block graphics.
  Fixes #61: Reworked light levels of all parts.
  Added Nether Quartz duplication to Certus Quartz duplication research.
  Fixes #91: Removed essentia gas air-block. This does brake compatibility with EC2's fluid formation plane.

11/19/2014 0.8.3b
  Fixes #90: Recipes with the "Wooden Gear" and "Certus Quartz" now refer to the ore dictionary.
  Not 100% sure this will fix the crucible result, but should fix the catalyst.
  Iron gear now registered with ore dictionary.
  Iron Gearbox is now an Arcane recipe.

11/17/2014 0.8.2b
  Fixes #88: Tooltips are no longer laggy.
  Fixes #86: Items in the ME network show their aspects in the A.C.T.