@@ -88,7 +88,7 @@ thaumicenergistics.research_page.TEARCANETERM.1=You have discovered that using p
 # Research Essentia terminal
 tc.research_name.thaumicenergistics.TEESSTERM=Essentia Monitoring
 tc.research_text.thaumicenergistics.TEESSTERM=Knowing how much you have.
-thaumicenergistics.research_page.TEESSTERM.1=The §lEssentia Terminal§r allows you to monitor how much essentia is stored within the network, and provides a way to fill and drain essentia containers within the terminal.
+thaumicenergistics.research_page.TEESSTERM.1=The §lEssentia Terminal§r and §lWireless Essentia Terminal§r allows you to monitor how much essentia is stored within the network, and provides a way to fill and drain essentia containers within the terminal.
 thaumicenergistics.research_page.TEESSTERM.2=The §lEssentia Level Emitter§r will continuously monitor the levels of essentia on the network, and provides a redstone signal when the appropriate conditions are met.
 
 # Research Essentia Provider
